# cmd/api/biz/pack/launch_screen.go
@@ -23,20 +23,22 @@ import (
 
 func BuildLaunchScreen(image *model.Picture) *api.Picture {
 	return &api.Picture{
-		ID:        image.Id,
-		UserID:    image.UserId,
-		URL:       image.Url,
-		PicType:   image.PicType,
-		Duration:  image.Duration,
-		Href:      image.Href,
-		ShowTimes: image.ShowTimes,
-		SType:     image.SType,
-		Frequency: image.Frequency,
-		Text:      image.Text,
-		StartAt:   image.StartAt,
-		EndAt:     image.EndAt,
-		StartTime: image.StartTime,
-		EndTime:   image.EndTime,
+		ID:         image.Id,
+		UserID:     image.UserId,
+		URL:        image.Url,
+		PicType:    image.PicType,
+		Duration:   image.Duration,
+		Href:       image.Href,
+		ShowTimes:  image.ShowTimes,
+		SType:      image.SType,
+		Frequency:  image.Frequency,
+		Text:       image.Text,
+		StartAt:    image.StartAt,
+		EndAt:      image.EndAt,
+		StartTime:  image.StartTime,
+		EndTime:    image.EndTime,
+		StudentID:  image.StudentId,
+		DeviceType: image.DeviceType,
 	}
 }
 
